# satellite-workshop

./: .gitignore  PickingImages.txt  README.md  pyproject.toml  requirements.txt  test.py
.devcontainer/: devcontainer.json
